<resources>
    <string name="app_name">Homie</string>
    <string name="logout">Log out</string>
    <string name="test_btn">Test btn</string>
    <string name="create_a_new_account"><u>Create a new account</u></string>
    <string name="already_have_account"><u>Already have an account</u></string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="base_url">http://104.248.241.99</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_preferences">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_device">Add device</string>
    <string name="last_name">Last name</string>
    <string name="location_of_device">Location of device</string>
    <string name="id_of_device">ID of device</string>
    <string name="email">Email</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="co2">CO2</string>
    <string name="temperature">temperature</string>
    <string name="humidity">humidity</string>
    <string name="light">light</string>
    <string name="howdy">Howdy,</string>
    <string name="product_owner">Product Owner</string>
</resources>
