<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_sensors_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/movement_sensor"
                style="@style/sensor_list_sensor_title_style"
                android:text="movement" />

            <LinearLayout
                android:id="@+id/movement_sensor_charts"
                style="@style/sensor_list_sensor_charts_style">

                <LinearLayout style="@style/sensor_list_frame_for_date_style">

                    <TextView
                        style="@style/sensor_list_date_text_style"
                        android:text="@string/from" />

                    <EditText
                        android:id="@+id/movement_date_from"
                        style="@style/sensor_list_date_edit_style" />

                </LinearLayout>

                <LinearLayout style="@style/sensor_list_frame_for_date_style">

                    <TextView
                        style="@style/sensor_list_date_text_style"
                        android:text="@string/to" />

                    <EditText
                        android:id="@+id/movement_date_to"
                        style="@style/sensor_list_date_edit_style" />

                </LinearLayout>

                <Button
                    android:id="@+id/movement_btn_show"
                    style="@style/sensor_list_show_button_style" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/movement_sensor_line_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/co_sensor"
                style="@style/sensor_list_sensor_title_style"
                android:text="@string/co2" />

            <LinearLayout
                android:id="@+id/co_sensor_charts"
                style="@style/sensor_list_sensor_charts_style">

                <LinearLayout style="@style/sensor_list_frame_for_date_style">

                    <TextView
                        style="@style/sensor_list_date_text_style"
                        android:text="@string/from" />

                    <EditText
                        android:id="@+id/co_date_from"
                        style="@style/sensor_list_date_edit_style" />

                </LinearLayout>

                <LinearLayout style="@style/sensor_list_frame_for_date_style">

                    <TextView
                        style="@style/sensor_list_date_text_style"
                        android:text="@string/to" />

                    <EditText
                        android:id="@+id/co_date_to"
                        style="@style/sensor_list_date_edit_style" />

                </LinearLayout>

                <Button
                    android:id="@+id/co_btn_show"
                    style="@style/sensor_list_show_button_style" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/co_sensor_bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/temperature_sensor"
                style="@style/sensor_list_sensor_title_style"
                android:text="@string/temperature" />

            <LinearLayout
                android:id="@+id/temperature_sensor_charts"
                style="@style/sensor_list_sensor_charts_style">

                <LinearLayout style="@style/sensor_list_frame_for_date_style">

                    <TextView
                        style="@style/sensor_list_date_text_style"
                        android:text="@string/from:" />

                    <EditText
                        android:id="@+id/temperature_date_from"
                        style="@style/sensor_list_date_edit_style" />

                </LinearLayout>

                <LinearLayout style="@style/sensor_list_frame_for_date_style">

                    <TextView
                        style="@style/sensor_list_date_text_style"
                        android:text="@string/to" />

                    <EditText
                        android:id="@+id/temperature_date_to"
                        style="@style/sensor_list_date_edit_style" />

                </LinearLayout>

                <Button
                    android:id="@+id/temperature_btn_show"
                    style="@style/sensor_list_show_button_style" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/temperature_sensor_bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/humidity_sensor"
                style="@style/sensor_list_sensor_title_style"
                android:text="@string/humidity" />

            <LinearLayout
                android:id="@+id/humidity_sensor_charts"
                style="@style/sensor_list_sensor_charts_style">

                <LinearLayout style="@style/sensor_list_frame_for_date_style">

                    <TextView
                        style="@style/sensor_list_date_text_style"
                        android:text="@string/from" />

                    <EditText
                        android:id="@+id/humidity_date_from"
                        style="@style/sensor_list_date_edit_style" />

                </LinearLayout>

                <LinearLayout style="@style/sensor_list_frame_for_date_style">

                    <TextView
                        style="@style/sensor_list_date_text_style"
                        android:text="@string/to" />

                    <EditText
                        android:id="@+id/humidity_date_to"
                        style="@style/sensor_list_date_edit_style" />

                </LinearLayout>

                <Button
                    android:id="@+id/humidity_btn_show"
                    style="@style/sensor_list_show_button_style" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/humidity_sensor_line_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/light_sensor"
                style="@style/sensor_list_sensor_title_style"
                android:text="@string/light" />

            <LinearLayout
                android:id="@+id/light_sensor_charts"
                style="@style/sensor_list_sensor_charts_style">

                <LinearLayout style="@style/sensor_list_frame_for_date_style">

                    <TextView
                        style="@style/sensor_list_date_text_style"
                        android:text="@string/from" />

                    <EditText
                        android:id="@+id/light_date_from"
                        style="@style/sensor_list_date_edit_style" />

                </LinearLayout>

                <LinearLayout style="@style/sensor_list_frame_for_date_style">

                    <TextView
                        style="@style/sensor_list_date_text_style"
                        android:text="@string/to" />

                    <EditText
                        android:id="@+id/light_date_to"
                        style="@style/sensor_list_date_edit_style" />

                </LinearLayout>

                <Button
                    android:id="@+id/light_btn_show"
                    style="@style/sensor_list_show_button_style" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/light_sensor_line_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>